--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ltc-app",
   "version": "0.1.0",
+  "homepage": "https://anfihal.github.io/ltc",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -15,10 +16,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
